docs/api/qiskit/0.19/qiskit.transpiler.PropertySet.mdx
---
title: PropertySet (v0.19)
description: API reference for qiskit.transpiler.PropertySet in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.PropertySet
---

# PropertySet

<Class id="qiskit.transpiler.PropertySet" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/propertyset.py" signature="PropertySet" modifiers="class">
  A default dictionary-like object

  ## Methods

  <span id="propertyset-getitem" />

  ### \_\_getitem\_\_

  <Function id="qiskit.transpiler.PropertySet.__getitem__" signature="PropertySet.__getitem__()">
    x.\_\_getitem\_\_(y) \<==> x\[y]
  </Function>

  <span id="propertyset-len" />

  ### \_\_len\_\_

  <Function id="qiskit.transpiler.PropertySet.__len__" signature="PropertySet.__len__()">
    Return len(self).
  </Function>

  <span id="propertyset-clear" />

  ### clear

  <Function id="qiskit.transpiler.PropertySet.clear" signature="PropertySet.clear() → None.  Remove all items from D." />

  <span id="propertyset-copy" />

  ### copy

  <Function id="qiskit.transpiler.PropertySet.copy" signature="PropertySet.copy() → a shallow copy of D" />

  <span id="propertyset-fromkeys" />

  ### fromkeys

  <Function id="qiskit.transpiler.PropertySet.fromkeys" signature="PropertySet.fromkeys(value=None, /)">
    Create a new dictionary with keys from iterable and values set to value.
  </Function>

  <span id="propertyset-get" />

  ### get

  <Function id="qiskit.transpiler.PropertySet.get" signature="PropertySet.get(key, default=None, /)">
    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="propertyset-items" />

  ### items

  <Function id="qiskit.transpiler.PropertySet.items" signature="PropertySet.items() → a set-like object providing a view on D’s items" />

  <span id="propertyset-keys" />

  ### keys

  <Function id="qiskit.transpiler.PropertySet.keys" signature="PropertySet.keys() → a set-like object providing a view on D’s keys" />

  <span id="propertyset-pop" />

  ### pop

  <Function id="qiskit.transpiler.PropertySet.pop" signature="PropertySet.pop(k[, d]) → v, remove specified key and return the corresponding value.">
    If key is not found, d is returned if given, otherwise KeyError is raised
  </Function>

  <span id="propertyset-popitem" />

  ### popitem

  <Function id="qiskit.transpiler.PropertySet.popitem" signature="PropertySet.popitem() → (k, v), remove and return some (key, value) pair as a">
    2-tuple; but raise KeyError if D is empty.
  </Function>

  <span id="propertyset-setdefault" />

  ### setdefault

  <Function id="qiskit.transpiler.PropertySet.setdefault" signature="PropertySet.setdefault(key, default=None, /)">
    Insert key with a value of default if key is not in the dictionary.

    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="propertyset-update" />

  ### update

  <Function id="qiskit.transpiler.PropertySet.update" signature="PropertySet.update([E, ]**F) → None.  Update D from dict/iterable E and F.">
    If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k]
  </Function>

  <span id="propertyset-values" />

  ### values

  <Function id="qiskit.transpiler.PropertySet.values" signature="PropertySet.values() → an object providing a view on D’s values" />
</Class>

